# ICP

./: Cargo.toml  README.md  dfx.json
.idx/: dev.nix
src/dex_blog_backend/: Cargo.toml
src/dex_blog_backend/src/: lib.rs
src/dex_blog_frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
src/dex_blog_frontend/ai/: dev.ts
src/dex_blog_frontend/ai/flows/: suggest-article-expansion.ts
src/dex_blog_frontend/app/: globals.css  layout.tsx  page.tsx
src/dex_blog_frontend/app/admin/: layout.tsx  page.tsx
src/dex_blog_frontend/app/admin/login/: page.tsx
src/dex_blog_frontend/app/categories/[slug]/: page.tsx
src/dex_blog_frontend/app/posts/[slug]/: page.tsx
src/dex_blog_frontend/app/support/: page.tsx
src/dex_blog_frontend/app/tags/[slug]/: page.tsx
src/dex_blog_frontend/app/user/login/: page.tsx
src/dex_blog_frontend/components/: comment-form.tsx  comment-list.tsx  comments.tsx  pagination-component.tsx  post-card.tsx  site-footer.tsx  site-header.tsx  tag-pills.tsx
src/dex_blog_frontend/components/admin/: article-editor.tsx
src/dex_blog_frontend/components/sections/: creators-list-section.tsx  featured-post-section.tsx  post-sidebar-section.tsx  recent-articles-section.tsx  videos-section.tsx
src/dex_blog_frontend/components/sections/ads/: banner-carousel-section.tsx  box-ad-carousel.tsx  (+1 more)
src/dex_blog_frontend/components/ui/: button.tsx  card.tsx  carousel.tsx  core-nav.tsx  footer.tsx  sheet.tsx
src/dex_blog_frontend/lib/: data.ts  placeholder-images.json  registry.tsx  types.ts  videos-data.ts
(+2 files in other folders)
