[package]
name = "dex_blog_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-timers = "0.12" 

# --- DEPENDÊNCIAS ESSENCIAIS CORRIGIDAS ---
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
# --- FIM ---